# corsa

./: .gitignore  1. Corsa_Jenza_F2025.ipynb  2. Corsa_Geneds_F2025.ipynb  3. Corsa_AUA_Merged_F2025.ipynb  Coursa_Jenza_F2025.ipynb  LICENSE  README.md  pyproject.toml
